[package]
name = "udp-logger-rs"
version = "0.1.1"
edition = "2018"

authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
description = "Log macro for log's kv-unstable backend and a UDP socket logger."
documentation = "https://docs.rs/udp-logger-rs"
readme = "README.md"
keywords = ["log", "kv", "key", "value", "udp"]
categories = ["text-processing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brucebrown/udp-logger-rs"


[dependencies]
log = { version = "0.4", features = ["std", "kv_unstable_std"] }
chrono = { version = "0.4", features = ["std"] }
bytebuffer = "0.2"
libflate = "1.1"


[dev-dependencies]
femme = "2.1"